# EarthRise.RTS

./: ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  EarthRise.sln.DotSettings  EarthRise.slnx  Folder.DotSettings  README.md  build-baseline.md  directx12.md  impl.md  improve.md  phase3-safety-inventory.md  types.md  vcpkg.json
EarthRise/: CMakeLists.txt  EarthRise.cpp  EarthRise.h  EarthRise.vcxproj  EarthRise.vcxproj.filters  Package.appxmanifest  app.manifest  launch.cpp  pch.h  resources.rc
EarthRise/Assets/script/Object/: WarpNode.lts
EarthRise/Assets/script/Widget/: Browser.lts
EarthRise/Assets/script/Widget/HUD/: WorldObject.lts
NeuronClient/: CMakeLists.txt  Common.h  GameMain.h  NeuronClient.cpp  NeuronClient.h  NeuronClient.vcxproj  NeuronClient.vcxproj.filters  packages.config  pch.h  vcpkg.json
NeuronClient/AI/: NLPContext.h  NLPPhrase.cpp  NLPPhrase.h  Traits.h
NeuronClient/Audio/: Common.h  Envelopes.cpp  Filters.cpp  Generator.h  IO.cpp  IO.h  Note.h  Signal.cpp  Signal.h  Signals.h
NeuronClient/Audio/Signal/: Compress.cpp  Delay.cpp  Instrument.cpp  Lowpass.cpp
NeuronClient/CodeGen/: CodeBlock.h  Common.h
NeuronClient/Component/: Account.cpp  Account.h  Affectable.h  Asset.cpp  Asset.h  Assets.cpp  Assets.h  Attachable.cpp  Attachable.h  BoundingBox.cpp  BoundingBox.h  Cargo.cpp  Cargo.h  Collidable.cpp  Collidable.h  Crew.h  Cullable.h  Damager.cpp  Damager.h  Database.h  Detectable.h  Dockable.cpp  Dockable.h  Drawable.cpp  Drawable.h  Economy.cpp  Economy.h  Explodable.cpp  Explodable.h  History.cpp  History.h  Info.cpp  Info.h  Integrity.h  Interior.cpp  Interior.h  Log.h  Market.cpp  Market.h  Motion.cpp  (+17 more)
NeuronClient/Game/: Beam.cpp  Beam.h  Camera.cpp  Camera.h  Common.h  Conditions.h  Constants.h  Item.cpp  Item.h  ItemProperty.h  ItemPropertys.h  Items.h  Light.h  Materials.cpp  Mission.h  NLP.cpp  NLP.h  Object.cpp  Object.h  Objects.h  Player.cpp  Project.cpp  Project.h  ShadingModels.h  Task.h  Universe.cpp  Universe.h  UpdateState.h
NeuronClient/Game/Action/: Mine.cpp
NeuronClient/Game/Graphics/: Effects.cpp  Effects.h  Generators.cpp  Generators.h  RenderStyles.h
NeuronClient/Game/Graphics/Generator/: Blur.cpp  IRMap.cpp  Nebula.cpp  NormalMap.cpp  PlanetSkybox.cpp  PlanetSurface.cpp
NeuronClient/Game/Item/: AssemblyChip.cpp  Blueprint.cpp  PlanetType.cpp  ShipType.cpp  StationType.cpp  StationType.h  WeaponType.cpp  WeaponType.h
NeuronClient/Game/Object/: DroneBay.cpp  Explosion.cpp  Missile.cpp  PowerGenerator.cpp  ProductionLab.cpp  Pulse.cpp  Rail.cpp  Region.cpp  Scanner.cpp  Shield.cpp  SoundEmitter.cpp  System.cpp  TechLab.cpp  Thruster.cpp  Trail.cpp  TransferUnit.cpp  Turret.cpp  WarpNode.cpp  Weapon.cpp  Zone.cpp
NeuronClient/Game/RenderPass/: Blended.cpp  Clear.cpp  DepthPrepass.cpp  DustClouds.cpp  GBuffer.cpp  LocalLighting.cpp  SMAA.cpp
NeuronClient/Game/Renderable/: Imposter.cpp
NeuronClient/Game/ScriptAPI/: Object.cpp
NeuronClient/Game/Task/: Buy.cpp  Custom.cpp  Destroy.cpp  Dock.cpp  Drill.cpp  Goto.cpp  LOD.cpp  Manage.cpp  Mine.cpp  Mint.cpp  Patrol.cpp  Pirate.cpp  Play.cpp  Produce.cpp  Research.cpp  Sell.cpp  Spawn.cpp  Transport.cpp  Wait.cpp
NeuronClient/Game/Widget/: HUD.cpp
NeuronClient/Graphics/: DirectXHelper.h  d3dx12.h
NeuronClient/LTE/: Archive.cpp  Archive.h  Array.h  AutoPtr.h  Axis.cpp  Axis.h  BaseVector.h  Bound.h  Buttons.cpp  Buttons.h  CollisionMesh.cpp  CollisionMesh.h  Common.h  Compare_AutoPtr_Pointer.h  Compare_AutoPtr_Reference.h  Compare_Pointer_Reference.h  Config.h  CubeMap.cpp  CubeMap.h  Data.h  Debug.h  DeclareFunction.h  Diff.cpp  Diff.h  Distribution.h  DrawState.cpp  DrawState.h  Expression.cpp  Expression.h  Expressions.h  Finite.h  Font.cpp  Function.cpp  Function.h  Function_Generated.h  GL.h  GLEnum.h  Geom.h  Grammar.h  Graph.h  (+107 more)
NeuronClient/LTE/Expression/: ExpressionCall.cpp  FunctionCall.cpp  List.cpp
NeuronClient/LTE/Render/D3D12/: D3D12ClearPresent.cpp  D3D12ClearPresent.h  D3D12Probe.cpp  D3D12Probe.h
NeuronClient/LTE/Render/D3D12/Shaders/: BootstrapClear.hlsl
NeuronClient/LTE/ScriptAPI/: Int.cpp  String.cpp  Thread.cpp  Timer.cpp
NeuronClient/Module/: FrameTimer.cpp  PhysicsEngine.cpp  PhysicsEngine.h  Scheduler.cpp  Scheduler.h  Settings.cpp  Settings.h  SettingsEntry.h  SoundEngine.cpp  SoundEngine.h
NeuronClient/Module/SoundEngine/: XAudio2.cpp
NeuronClient/Network/: Client.h
NeuronClient/NeuronClient/x64/Debug/: NeuronClient.vcxproj.AssemblyReference.cache  NeuronClient.vcxproj.FileListAbsolute.txt  NeuronClient.vcxproj.cppwinrt_comp.cache  NeuronClient.vcxproj.cppwinrt_comp.rsp  NeuronClient.vcxproj.cppwinrt_plat.rsp  NeuronClient.vcxproj.cppwinrt_ref.rsp  NeuronClient.vcxproj.mdmerge.rsp  NeuronClient.vcxproj.midlrt.rsp  priconfig.xml.intermediate
NeuronClient/NeuronClient/x64/Debug/NeuronClient.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  (+4 more)
NeuronClient/UI/: ClipRegion.cpp  Cursor.cpp  Glyph.h  Interface.cpp  Interface.h  Widget.h  WidgetRenderer.cpp
NeuronClient/UI/ScriptAPI/: Interface.cpp  Widget.cpp
NeuronClient/UI/Widget/: Layer.cpp  Rendered.cpp
NeuronClient/UTF8/: checked.h
NeuronClient/Volume/: Array3D.cpp  Array3D.h  MarchingCubes.cpp
NeuronCore/: ASyncLoader.h  CMakeLists.txt  DataReader.h  DataWriter.h  Debug.h  EventManager.cpp  EventManager.h  FileSys.cpp  FileSys.h  GameEvent.h  NeuronCore.cpp  NeuronCore.h  NeuronCore.vcxproj  NeuronCore.vcxproj.filters  pch.h
Tests/: CMakeLists.txt
Tests/EarthRise.Test/Integration/: EarthRiseIntegrationTests.cpp
Tests/EarthRise.Test/Unit/: EarthRiseSmokeTests.cpp
Tests/NeuronClient.Test/Integration/: NeuronClientIntegrationTests.cpp
Tests/NeuronClient.Test/Unit/: NeuronClientSmokeTests.cpp
Tests/NeuronCore.Test/Integration/: FileSysIntegrationTests.cpp  NeuronCoreIntegrationTests.cpp
Tests/NeuronCore.Test/Unit/: AsyncLoaderTests.cpp  DataSerializationTests.cpp  DebugTests.cpp  EventManagerTests.cpp  MathAndTimerTests.cpp  NeuronCoreSmokeTests.cpp  TasksThreadTests.cpp
(+16 files in other folders)
